[package]
name = "pikachu_valleyball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.15.3"
amethyst_window = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
macroquad = { version = "0.3.10" }
glm = "0.2.3"

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]