[package]
name = "pikachu_valleyball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.15.3"
amethyst_window = "0.15.3"
rapier2d = "0.12.0"

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]